# Cpp-Study

./: .gitignore  CMakeLists.txt  README.md  VirtualDestructor.cpp  checkSensor.pro  checksensor.cpp  const_with_variable.cpp  header.h  main.cpp
HDR/: FileManager.h  Reader.h  Searcher.h  Utility.h
SRC/: FileManager.cpp  Reader.cpp  Searcher.cpp  Utility.cpp  main.cpp
